compiler/test-data/parser/expressions/errors/unclosed_interpolation.frel
module test

blueprint Bad {
    x : i32 = 5
    y : String = "value: ${x"
}
